--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -18,8 +18,7 @@
                 </div>
             </div>
             {% for faction in factions %}
-            <a name="{{ faction.name|slug }}"></a>
-            <div class="col-xs-12 col-md-6">
+            <div class="col-xs-12 col-md-6"><a name="{{ faction.name|slug }}"></a>
                 <div class="panel panel-{{ faction.class }}">
                     <div class="panel-heading text-center">{{ faction.name }}</div>
                     <div class="panel-body">
@@ -27,8 +26,8 @@
                             <div class="col-xs-4">
                                 <img class="custom-thumbnail" src="{{ asset(faction.image) }}">
                             </div>
-                            <div class="col-xs-8">
-                                <p>{{ faction.description }}</p>
+                            <div class="col-xs-8 text-padded">
+                                {{ faction.description }}
                             </div>
                         </div>
                     </div>
@@ -54,8 +53,7 @@
                 </div>
             </div>
             {% for building in buildings %}
-            <a name="{{ building.name|slug }}"></a>
-            <div class="col-xs-12 col-md-6">
+            <div class="col-xs-12 col-md-6"><a name="{{ building.name|slug }}"></a>
                 <div class="panel panel-default">
                     <div class="panel-heading text-center">{{ building.name }}</div>
                     <div class="panel-body">
@@ -63,8 +61,8 @@
                             <div class="col-xs-4">
                                 <img class="custom-thumbnail" src="{{ asset( building.image ) }}">
                             </div>
-                            <div class="col-xs-8">
-                                <p>{{ building.description }}</p>
+                            <div class="col-xs-8 text-padded">
+                                {{ building.description }}
                             </div>
                         </div>
                     </div>
@@ -78,8 +76,7 @@
                 </div>
             </div>
             {% for unit in units %}
-            <a name="{{ unit.name|slug }}"></a>
-            <div class="col-xs-12 col-md-6">
+            <div class="col-xs-12 col-md-6"><a name="{{ unit.name|slug }}"></a>
                 <div class="panel panel-{{ unit.faction.class }}">
                     <div class="panel-heading text-center">{{ unit.name }}</div>
                     <div class="panel-body">
@@ -110,8 +107,7 @@
                 </div>
             </div>
             {% for hero in heroes %}
-            <a name="{{ hero.name|slug }}"></a>
-            <div class="col-xs-12 col-md-6">
+            <div class="col-xs-12 col-md-6"><a name="{{ hero.name|slug }}"></a>
                 <div class="panel panel-{{ hero.faction.class }}">
                     <div class="panel-heading text-center">{{ hero.name }}</div>
                     <div class="panel-body">
@@ -120,7 +116,7 @@
                                 <img class="custom-thumbnail" src="{{ asset( hero.image ) }}">
                             </div>
                             <div class="col-xs-8 text-padded">
-                                Texto de prueba
+                                {{ hero.description }}
                             </div>
                         </div>
                     </div>
@@ -134,8 +130,7 @@
                 </div>
             </div>
             {% for spell in spells %}
-            <a name="{{ spell.name|slug }}"></a>
-            <div class="col-xs-12 col-md-6">
+            <div class="col-xs-12 col-md-6"><a name="{{ spell.name|slug }}"></a>
                 <div class="panel panel-{{ spell.faction.class }}">
                     <div class="panel-heading text-center">{{ spell.name }}</div>
                     <div class="panel-body">
@@ -162,8 +157,7 @@
                 </div>
             </div>
             {% for artifact in artifacts %}
-            <a name="{{ artifact.name|slug }}"></a>
-            <div class="col-xs-12 col-md-6">
+            <div class="col-xs-12 col-md-6"><a name="{{ artifact.name|slug }}"></a>
                 <div class="panel panel-default">
                     <div class="panel-heading text-center">{{ artifact.name }}</div>
                     <div class="panel-body">
@@ -171,8 +165,8 @@
                             <div class="col-xs-4">
                                 <img class="custom-thumbnail" src="{{ asset( artifact.image ) }}">
                             </div>
-                            <div class="col-xs-8">
-                                <p>{{ artifact.description|e }}</p>
+                            <div class="col-xs-8 text-padded">
+                                {{ artifact.description }}
                             </div>
                         </div>
                     </div>
