--- a/src/Archmage/GameBundle/Resources/views/Home/index.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/index.html.twig
@@ -14,41 +14,15 @@
             <a href="#">Registrar</a> - <a href="#">Recuperar</a> - <a href="{{ path('archmage_game_home_help') }}">Ayuda</a>
             <br><br>
             <div class="row">
-                <div class="col-xs-offset-1 col-xs-2">
-                    <a href="{{ path('archmage_game_home_help') }}#factions" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/doom.jpg') }}"/></a>
-                    <div class="caption hidden-xs hidden-sm text-danger">
-                        <h3>Destrucción</h3>
-                        <small>Fuego y sangre</small>
+                {% for faction in factions %}
+                <div class="{% if loop.first %}col-xs-offset-1 {% endif %}col-xs-2">
+                    <a href="{{ path('archmage_game_home_help') }}#{{ faction.name|slug }}" class="thumbnail"><img src="{{ asset( faction.image ) }}"/></a>
+                    <div class="caption hidden-xs hidden-sm text-{{ faction.class }}">
+                        <h3>{{ faction.name }}</h3>
+                        <small>{{ faction.slogan }}</small>
                     </div>
                 </div>
-                <div class="col-xs-2">
-                    <a href="{{ path('archmage_game_home_help') }}#factions" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/darkness.jpg') }}"/></a>
-                    <div class="caption hidden-xs hidden-sm text-warning">
-                        <h3>Oscuridad</h3>
-                        <small>Carne y hueso</small>
-                    </div>
-                </div>
-                <div class="col-xs-2">
-                    <a href="{{ path('archmage_game_home_help') }}#factions" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/nature.jpg') }}"/></a>
-                    <div class="caption hidden-xs hidden-sm text-success">
-                        <h3>Naturaleza</h3>
-                        <small>Tierra y agua</small>
-                    </div>
-                </div>
-                <div class="col-xs-2">
-                    <a href="{{ path('archmage_game_home_help') }}#factions" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/ghost.jpg') }}"/></a>
-                    <div class="caption hidden-xs hidden-sm text-info">
-                        <h3>Fantasmal</h3>
-                        <small>Mente y espíritu</small>
-                    </div>
-                </div>
-                <div class="col-xs-2">
-                    <a href="{{ path('archmage_game_home_help') }}#factions" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/holy.jpg') }}"/></a>
-                    <div class="caption hidden-xs hidden-sm text-primary">
-                        <h3>Sagrado</h3>
-                        <small>Luz y gloria</small>
-                    </div>
-                </div>
+                {% endfor %}
             </div>
         </div>
     </div>
