--- a/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1><i class="fa fa-fw fa-user-secret"></i> Mercado negro</h1>
+                    <h1><i class="fa fa-fw fa-user-secret"></i> Mercado negro<br><small><i class="fa fa-fw fa-hourglass"></i>300</small></h1>
                 </div>
             </div>
             {% for hero in heroes %}
@@ -19,8 +19,11 @@
                             <div class="col-xs-4">
                                 <img class="custom-thumbnail" src="{{ asset(hero.image) }}">
                             </div>
-                            <div class="col-xs-8">
-
+                            <div class="col-xs-8 text-padded">
+                                <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ hero.goldMaintenance|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ hero.manaMaintenance|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ hero.peopleMaintenance|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-joomla"></i><a href="#">Habilidad</a></div>
                             </div>
                         </div>
                     </div>
@@ -49,8 +52,8 @@
                             <div class="col-xs-4">
                                 <img class="custom-thumbnail" src="{{ asset(artifact.image) }}">
                             </div>
-                            <div class="col-xs-8">
-
+                            <div class="col-xs-8 text-padded">
+                                {{ artifact.description }}
                             </div>
                         </div>
                     </div>
@@ -73,14 +76,24 @@
             {% for unit in units %}
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-{{ unit.faction.class }}">
-                    <div class="panel-heading text-center"><a href="{{ path('archmage_game_home_help') }}#{{ unit.name|slug }}">{{ unit.name }}</a></div>
+                    <div class="panel-heading text-center"><a href="{{ path('archmage_game_home_help') }}#{{ unit.name|slug }}">{{ unit.name }}</a> [{{ random(1500)|nf }}]</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-4">
                                 <img class="custom-thumbnail" src="{{ asset(unit.image) }}">
                             </div>
                             <div class="col-xs-8">
-
+                                <div class="col-xs-8 text-padded">
+                                    <div class="col-xs-4"><i class="fa fa-fw fa-rocket"></i>{{ unit.attack|nf }}</div>
+                                    <div class="col-xs-4"><i class="fa fa-fw fa-shield"></i>{{ unit.defense|nf }}</div>
+                                    <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i>{{ unit.speed }}</div>
+                                    <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ unit.goldMaintenance|nf }}</div>
+                                    <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ unit.manaMaintenance|nf }}</div>
+                                    <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ unit.peopleMaintenance|nf }}</div>
+                                    <div class="col-xs-6"><i class="fa fa-fw fa-user"></i><a href="#">{{ unit.family.name }}</a></div>
+                                    <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i><a href="#">{{ unit.type.name }}</a></div>
+                                    <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i><a href="#">Habilidad</a></div>
+                                </div>
                             </div>
                         </div>
                     </div>
