--- a/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
@@ -7,17 +7,17 @@
         <div class="row">
             <div class="col-md-offset-3 col-md-6 col-xs-12">
                 <div class="page-header text-center">
-                    <h1><i class="fa fa-fw fa-map"></i> Explorar</h1>
+                    <h1><i class="fa fa-fw fa-map"></i> Explorar<br><small><i class="fa fa-fw fa-hourglass"></i>300</small></h1>
                 </div>
                 <div class="panel panel-default">
-                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-hourglass-half"></i> {{ random(300)|nf }} <i class="fa fa-fw fa-lg fa-globe"></i> {{ random(3000)|nf }}</div>
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-globe"></i> {{ random(3000)|nf }} tierras</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-4">
                                 <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/territory.jpg') }}">
                             </div>
-                            <div class="col-xs-8">
-                                <p>Texto descriptivo</p>
+                            <div class="col-xs-8 text-padded">
+                                Texto descriptivo
                             </div>
                         </div>
                     </div>
