--- a/src/Archmage/GameBundle/Resources/views/Kingdom/blackmarket.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/blackmarket.html.twig
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1><i class="fa fa-fw fa-user-secret"></i> Mercado negro<br><small><i class="fa fa-fw fa-hourglass"></i>300</small></h1>
+                    <h1><i class="fa fa-fw fa-user-secret"></i>Mercado negro<br><small><i class="fa fa-fw fa-money"></i>{{ random(1000000000)|nf }}</small></h1>
                 </div>
             </div>
             {% for hero in heroes %}
@@ -82,18 +82,16 @@
                             <div class="col-xs-4">
                                 <img class="custom-thumbnail" src="{{ asset(unit.image) }}">
                             </div>
-                            <div class="col-xs-8">
-                                <div class="col-xs-8 text-padded">
-                                    <div class="col-xs-4"><i class="fa fa-fw fa-rocket"></i>{{ unit.attack|nf }}</div>
-                                    <div class="col-xs-4"><i class="fa fa-fw fa-shield"></i>{{ unit.defense|nf }}</div>
-                                    <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i>{{ unit.speed }}</div>
-                                    <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ unit.goldMaintenance|nf }}</div>
-                                    <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ unit.manaMaintenance|nf }}</div>
-                                    <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ unit.peopleMaintenance|nf }}</div>
-                                    <div class="col-xs-6"><i class="fa fa-fw fa-user"></i><a href="#">{{ unit.family.name }}</a></div>
-                                    <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i><a href="#">{{ unit.type.name }}</a></div>
-                                    <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i><a href="#">Habilidad</a></div>
-                                </div>
+                            <div class="col-xs-8 text-padded">
+                                <div class="col-xs-4"><i class="fa fa-fw fa-rocket"></i>{{ unit.attack|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-shield"></i>{{ unit.defense|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i>{{ unit.speed }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ unit.goldMaintenance|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ unit.manaMaintenance|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ unit.peopleMaintenance|nf }}</div>
+                                <div class="col-xs-6"><a href="#"><i class="fa fa-fw fa-user"></i>{{ unit.family.name }}</a></div>
+                                <div class="col-xs-6"><a href="#"><i class="fa fa-fw fa-cogs"></i>{{ unit.type.name }}</a></div>
+                                <div class="col-xs-12"><a href="#"><i class="fa fa-fw fa-joomla"></i>Habilidad</a></div>
                             </div>
                         </div>
                     </div>
