--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1><i class="fa fa-fw fa-bar-chart"></i> Resumen<br><small><i class="fa fa-fw fa-hourglass"></i>300</small></h1>
+                    <h1><i class="fa fa-fw fa-bar-chart"></i>Resumen<br><small><i class="fa fa-fw fa-hourglass"></i>300</small></h1>
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
@@ -18,14 +18,14 @@
                             <div class="col-xs-4">
                                 <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/economy.jpg') }}">
                             </div>
-                            <div class="col-xs-8">
-                                <p>Texto descriptivo</p>
+                            <div class="col-xs-8 text-padded">
+                                Texto descriptivo
                             </div>
                         </div>
                     </div>
                     <div class="btn-group btn-group-justified" role="group" aria-label="...">
                         <a href="{{ path('archmage_game_kingdom_tax') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-money"></i><span class="hidden-xs"> Recaudar</span></a>
-                        <a href="{{ path('archmage_game_kingdom_auction') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-user-secret"></i><span class="hidden-xs"> Mercado negro</span></a>
+                        <a href="{{ path('archmage_game_kingdom_blackmarket') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-user-secret"></i><span class="hidden-xs"> Mercado negro</span></a>
                     </div>
                 </div>
             </div>
@@ -37,8 +37,8 @@
                             <div class="col-xs-4">
                                 <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/territory.jpg') }}">
                             </div>
-                            <div class="col-xs-8">
-                                <p>Texto descriptivo</p>
+                            <div class="col-xs-8 text-padded">
+                                Texto descriptivo
                             </div>
                         </div>
                     </div>
@@ -57,8 +57,8 @@
                             <div class="col-xs-4">
                                 <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/magic.jpg') }}">
                             </div>
-                            <div class="col-xs-8">
-                                <p>Texto descriptivo</p>
+                            <div class="col-xs-8 text-padded">
+                                Texto descriptivo
                             </div>
                         </div>
                     </div>
@@ -77,8 +77,8 @@
                             <div class="col-xs-4">
                                 <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/army.jpg') }}">
                             </div>
-                            <div class="col-xs-8">
-                                <p>Texto descriptivo</p>
+                            <div class="col-xs-8 text-padded">
+                                Texto descriptivo
                             </div>
                         </div>
                     </div>
@@ -97,8 +97,8 @@
                             <div class="col-xs-4">
                                 <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/defense.jpg') }}">
                             </div>
-                            <div class="col-xs-8">
-                                <p>Texto descriptivo</p>
+                            <div class="col-xs-8 text-padded">
+                                Texto descriptivo
                             </div>
                         </div>
                     </div>
@@ -116,8 +116,8 @@
                             <div class="col-xs-4">
                                 <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/social.jpg') }}">
                             </div>
-                            <div class="col-xs-8">
-                                <p>Texto descriptivo</p>
+                            <div class="col-xs-8 text-padded">
+                                Texto descriptivo
                             </div>
                         </div>
                     </div>
