--- a/src/Archmage/GameBundle/Resources/views/Magic/research.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/research.html.twig
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1><i class="fa fa-fw fa-graduation-cap"></i> Investigar<br><small><i class="fa fa-fw fa-hourglass"></i>300</small></h1>
+                    <h1><i class="fa fa-fw fa-graduation-cap"></i>Investigar<br><small><i class="fa fa-fw fa-hourglass"></i>300</small></h1>
                 </div>
             </div>
             {% for research in researchs %}
@@ -20,9 +20,10 @@
                                 <img class="custom-thumbnail" src="{{ asset( research.image ) }}">
                             </div>
                             <div class="col-xs-8 text-padded">
-                                <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ research.manaCost|nf }}</div>
-                                <div class="col-xs-4"><i class="fa fa-fw fa-magic"></i>{{ research.magic|nf }}</div>
-                                <div class="col-xs-4"><i class="fa fa-fw fa-hourglass"></i>{{ random(100) }} / {{ research.turnResearch }}</div>
+                                <div class="col-xs-6"><i class="fa fa-fw fa-magic"></i>{{ research.magic|nf }}</div>
+                                <div class="col-xs-6"><i class="fa fa-fw fa-tint"></i>{{ research.manaCost|nf }}</div>
+                                <div class="col-xs-6"><i class="fa fa-fw fa-hourglass-half"></i>{{ random(100) }}</div>
+                                <div class="col-xs-6"><i class="fa fa-fw fa-hourglass"></i>{{ random(100) }}</div>
                                 <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>Habilidad</div>
                             </div>
                         </div>
